[gd_scene load_steps=9 format=2]

[ext_resource path="res://dodge_assets/fonts/Xolonium-Regular.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://HUD.gd" type="Script" id=2]
[ext_resource path="res://dodge_assets/fonts/Comfortaa-Bold.ttf" type="DynamicFontData" id=3]
[ext_resource path="res://dodge_assets/ui/Close.png" type="Texture" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 3 )

[sub_resource type="DynamicFont" id=3]
size = 64
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=4]
font_data = ExtResource( 1 )

[node name="HUD" type="CanvasLayer"]
script = ExtResource( 2 )

[node name="InfoLabel" type="Label" parent="."]
visible = false
margin_left = 11.1885
margin_top = 131.68
margin_right = 560.189
margin_bottom = 238.68
rect_scale = Vector2( 0.840002, 1 )
custom_styles/normal = SubResource( 1 )
custom_fonts/font = SubResource( 2 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_outline_modulate = Color( 0, 0, 0, 1 )
text = "WASD for movement

Try to dodge the creeps as long as possible. 

1 second = 1 point

Items:
Apple heals a bit

Pineapple stops enemies spawning for a while

Melon speed-buffs the enemies permanently, catch it to revert it!"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ScoreLabel" type="Label" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
custom_fonts/font = SubResource( 3 )
text = "0"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="Label" parent="."]
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
margin_top = -79.5
margin_bottom = 79.5
custom_fonts/font = SubResource( 3 )
text = "Dodge the
 Creeps"
align = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StartButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -146.5
margin_top = -242.0
margin_right = 146.5
margin_bottom = -142.0
custom_fonts/font = SubResource( 3 )
text = "Start"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MulitplrButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -191.0
margin_top = -140.0
margin_right = 191.0
margin_bottom = -40.0
custom_fonts/font = SubResource( 3 )
text = "Multiplayer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InfoButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -112.321
margin_top = -636.192
margin_right = -3.3208
margin_bottom = -610.192
rect_scale = Vector2( 2.02853, 1.66243 )
custom_fonts/font = SubResource( 4 )
text = "How to play"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MessageTimer" type="Timer" parent="."]
wait_time = 2.0
one_shot = true

[node name="InfoExitButton" type="Button" parent="."]
visible = false
margin_left = 444.957
margin_top = 131.68
margin_right = 471.957
margin_bottom = 153.68
icon = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="StartButton" to="." method="_on_StartButton_pressed"]
[connection signal="pressed" from="MulitplrButton" to="." method="_on_MulitplrButton_pressed"]
[connection signal="pressed" from="InfoButton" to="." method="_on_InfoButton_pressed"]
[connection signal="timeout" from="MessageTimer" to="." method="_on_MessageTimer_timeout"]
[connection signal="pressed" from="InfoExitButton" to="." method="_on_InfoExitButton_pressed"]
